Feat: Increase security on containers
Where Possible, containers:
- Don't run as root
- Use ReadOnly filesystems
- No privilege escalation allowed
- No capabilities allowed

--- a/kubernetes/apps/downloads/sabnzbd/sabnzbd-deploy.yaml
+++ b/kubernetes/apps/downloads/sabnzbd/sabnzbd-deploy.yaml
@@ -45,6 +45,10 @@ spec:
           mountPath: /media/downloads/usenet
         securityContext:
           allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
+          capabilities:
+            drop:
+            - ALL
 ---
 apiVersion: v1
 kind: Service
