--- a/kubernetes/apps/home-automation/zigbee2mqtt/zigbee2mqtt-deploy.yaml
+++ b/kubernetes/apps/home-automation/zigbee2mqtt/zigbee2mqtt-deploy.yaml
@@ -55,6 +55,10 @@ spec:
           mountPath: /app/data
         securityContext:
           allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
+          capabilities:
+            drop:
+            - ALL
 ---
 apiVersion: v1
 kind: Service
