--- a/kubernetes/apps/media/mylar3/mylar3-deploy.yaml
+++ b/kubernetes/apps/media/mylar3/mylar3-deploy.yaml
@@ -67,6 +67,10 @@ spec:
           mountPath: /scratch
         securityContext:
           allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
+          capabilities:
+            drop:
+            - ALL
 ---
 apiVersion: v1
 kind: Service
