--- a/kubernetes/infrastructure/kube-system/reloader/helm-release.yaml
+++ b/kubernetes/infrastructure/kube-system/reloader/helm-release.yaml
@@ -17,3 +17,19 @@ spec:
         namespace: flux-system
   values:
     fullnameOverride: reloader
+    deployment:
+      containerSecurityContext:
+        allowPrivilegeEscalation: false
+        capabilities:
+          drop:
+          - ALL
+        readOnlyRootFilesystem: false
+      rbac:
+        enabled: true
+      securityContext:
+        automountServiceAccountToken: false
+        runAsNonRoot: true
+        runAsUser: 65534
+        runAsGroup: 65534
+        seccompProfile:
+          type: RuntimeDefault
